--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,17 @@
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
   datasource:
-    password: 'Emids123'
-    url: jdbc:mysql://localhost:3306/spring_boot
+    url: 'jdbc:mysql://localhost:3306/spring_boot'
     username: root
+    password: Emids123
+'#spring':
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    show-sql: 'true'
+  main:
+    banner-mode: 'off'  
+    
+    
