--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,12 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
-       <!--  <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-spring</artifactId>
-            <version>${cucumber.version}</version>
-            <scope>test</scope>
-        </dependency> -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+			<scope>provided</scope>
+		</dependency>
 		
 	</dependencies>
 
